test/spec/memory.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/memory.wast
(;; STDOUT ;;;
assert_invalid error:
  third_party/testsuite/memory.wast:21:26: memory variable out of range (max 0)
(assert_invalid (module (data (i32.const 0))) "unknown memory")
                         ^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:22:26: memory variable out of range (max 0)
(assert_invalid (module (data (i32.const 0) "")) "unknown memory")
                         ^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:23:26: memory variable out of range (max 0)
(assert_invalid (module (data (i32.const 0) "x")) "unknown memory")
                         ^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:26:29: data segment expression must be of type i32; got i64.
  (module (memory 1) (data (i64.const 0)))
                            ^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:30:29: invalid data segment expression, must be a constant expression; either *.const or get_global.
  (module (memory 1) (data (i32.ctz (i32.const 0))))
                            ^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:34:29: invalid data segment expression, must be a constant expression; either *.const or get_global.
  (module (memory 1) (data (nop)))
                            ^^^
assert_invalid error:
  third_party/testsuite/memory.wast:39:11: max pages (0) must be >= initial pages (1)
  (module (memory 1 0))
          ^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:43:24: segment ends past the end of memory (0)
  (module (memory 0 0) (data (i32.const 0) "a"))
                       ^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:47:49: segment ends past the end of memory (65536)
  (module (memory 1 2) (data (i32.const 0) "a") (data (i32.const 98304) "b"))
                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:51:51: segment offset (0) less than end of previous segment (3)
  (module (memory 1 2) (data (i32.const 0) "abc") (data (i32.const 0) "def"))
                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:55:50: segment offset (0) less than end of previous segment (5)
  (module (memory 1 2) (data (i32.const 3) "ab") (data (i32.const 0) "de"))
                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:61:55: segment offset (1) less than end of previous segment (3)
    (data (i32.const 0) "a") (data (i32.const 2) "b") (data (i32.const 1) "c")
                                                      ^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:66:11: initial pages (65537) must be <= (65536)
  (module (memory 65537))
          ^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:70:11: initial pages (2147483648) must be <= (65536)
  (module (memory 2147483648))
          ^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:74:11: initial pages (4294967295) must be <= (65536)
  (module (memory 4294967295))
          ^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:78:11: max pages (65537) must be <= (65536)
  (module (memory 0 65537))
          ^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:82:11: max pages (2147483648) must be <= (65536)
  (module (memory 0 2147483648))
          ^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:86:11: max pages (4294967295) must be <= (65536)
  (module (memory 0 4294967295))
          ^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:97:35: alignment must be power-of-two
  (module (memory 0) (func (drop (i64.load align=0 (i32.const 0)))))
                                  ^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:101:35: alignment must be power-of-two
  (module (memory 0) (func (drop (i64.load align=3 (i32.const 0)))))
                                  ^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:105:35: alignment must be power-of-two
  (module (memory 0) (func (drop (i64.load align=5 (i32.const 0)))))
                                  ^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:109:35: alignment must be power-of-two
  (module (memory 0) (func (drop (i64.load align=6 (i32.const 0)))))
                                  ^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:113:35: alignment must be power-of-two
  (module (memory 0) (func (drop (i64.load align=7 (i32.const 0)))))
                                  ^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:118:35: alignment must not be larger than natural alignment (8)
  (module (memory 0) (func (drop (i64.load align=16 (i32.const 0)))))
                                  ^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:122:35: alignment must not be larger than natural alignment (8)
  (module (memory 0) (func (drop (i64.load align=32 (i32.const 0)))))
                                  ^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:126:35: alignment must not be larger than natural alignment (4)
  (module (memory 0) (func (drop (i32.load align=8 (i32.const 0)))))
                                  ^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:130:35: alignment must not be larger than natural alignment (2)
  (module (memory 0) (func (drop (i32.load16_u align=4 (i32.const 0)))))
                                  ^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:134:35: alignment must not be larger than natural alignment (1)
  (module (memory 0) (func (drop (i32.load8_u align=2 (i32.const 0)))))
                                  ^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:138:29: alignment must not be larger than natural alignment (1)
  (module (memory 0) (func (i32.store8 align=2 (i32.const 0) (i32.const 0))))
                            ^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:142:29: alignment must not be larger than natural alignment (2)
  (module (memory 0) (func (i32.load16_u align=4 (i32.const 0))))
                            ^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:142:22: type stack at end of function is 1. expected 0
  (module (memory 0) (func (i32.load16_u align=4 (i32.const 0))))
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:146:29: alignment must not be larger than natural alignment (1)
  (module (memory 0) (func (i32.load8_u align=2 (i32.const 0))))
                            ^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:146:22: type stack at end of function is 1. expected 0
  (module (memory 0) (func (i32.load8_u align=2 (i32.const 0))))
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:150:29: alignment must not be larger than natural alignment (1)
  (module (memory 0) (func (i32.store8 align=2 (i32.const 0) (i32.const 0))))
                            ^^^^^^^^^^^^^^^^^^
27/27 tests passed.
;;; STDOUT ;;)
